--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 
 
 spring:
+  autoconfigure:
+        exclude:  org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
   datasource:
       username: root
       password: root
