--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
     port: 9192
 
 
+
 spring:
   autoconfigure:
         exclude:  org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
@@ -15,11 +16,11 @@ spring:
     show-sql: true
     hibernate: 
         ddl-auto: update
-        format_sql: true
+        
   servlet:
-  
-    max-file-size: 5MB
-    max-request-size: 5MB
-    file-size-threshold: 2KB
+   multipart:
+    max-file-size: 10MB
+    max-request-size: 10MB
+    file-size-threshold: 4KB
             
         
